Fix submenu item alignment.

--- a/full_rubik_style.scss
+++ b/full_rubik_style.scss
@@ -467,7 +467,7 @@ ul.primary-tabs.links {
       &.dropdown.open>a {
         background-color: #f8f8f8;
         width: 90%;
-        text-align: left;
+        text-align: center;
       }
 
       a {
